// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should add a file import 3`] = `
[
  {
    "_id": "32174469_2471540929_0",
    "_rev": "1-625f5100b7ddd2157bf9324a5942b7bf",
    "change": "-0.468064038",
    "changeN": -0.468064038,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "txId": "32174469_2471540929",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_2471540929_1",
    "_rev": "1-4d73a6818d624e3ccd0b10f3c982c44d",
    "change": "-0.0003213",
    "changeN": -0.0003213,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "txId": "32174469_2471540929",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_0",
    "_rev": "1-35faa3bc748be4ab6906158f2386ee6e",
    "change": "-0.03",
    "changeN": -0.03,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "txId": "32174469_4171546297",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_1",
    "_rev": "1-ea8b5eb7442cba38e5b7b17babd88ee3",
    "change": "-0.000134622",
    "changeN": -0.000134622,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "txId": "32174469_4171546297",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_0",
    "_rev": "1-fc29b0f7c583c5a05724ff49071e1d16",
    "change": "-1",
    "changeN": -1,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "txId": "32174469_3745186990",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_1",
    "_rev": "1-5a98448a926798a058e62628bd4fdc97",
    "change": "-0.00042",
    "changeN": -0.00042,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "txId": "32174469_3745186990",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_0",
    "_rev": "1-b99eb61344c748d0672a72f5a32e8839",
    "change": "-0.5",
    "changeN": -0.5,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "txId": "32174469_1010805629",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_1",
    "_rev": "1-210992321fa103e3c467d43e7e43bef3",
    "change": "-0.000441",
    "changeN": -0.000441,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "txId": "32174469_1010805629",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_0",
    "_rev": "1-7dbbe3ce9a79443c0dc0ad3a43775d8a",
    "change": "-2.801",
    "changeN": -2.801,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "txId": "32174469_3666988626",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_1",
    "_rev": "1-8cab68d61a4745d9ba0cf6bb6217888d",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "txId": "32174469_3666988626",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_0",
    "_rev": "1-50a7035d2dc98c94b509a146798ae0e2",
    "change": "-0.25",
    "changeN": -0.25,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "txId": "32174469_677045801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_1",
    "_rev": "1-1f92881fbf18c37b47ac30a6e3cdeedf",
    "change": "-0.00042",
    "changeN": -0.00042,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "txId": "32174469_677045801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_0",
    "_rev": "1-4df239e78f0dfddfeaa20a831107b3c9",
    "change": "-0.1",
    "changeN": -0.1,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "txId": "32174469_1496232788",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_1",
    "_rev": "1-e9d49066b9adc0495b5f1be06779a047",
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "txId": "32174469_1496232788",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4131431469_0",
    "_rev": "1-44cf419b15609b6467e3cfe7f73ddb1c",
    "change": "5.061643",
    "changeN": 5.061643,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "ETH",
    "timestamp": 1504970517000,
    "txId": "32174469_4131431469",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1605478640_0",
    "_rev": "1-54fda970b55ac239d53df02fc29b3b58",
    "change": "0.09",
    "changeN": 0.09,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "ETH",
    "timestamp": 1504969089000,
    "txId": "32174469_1605478640",
    "wallet": "Spot",
  },
]
`;

exports[`should add an erc20 file import 3`] = `
[
  {
    "_id": "3090763006_3337412441",
    "_rev": "1-89953bc160b91ec324e719b3423fc568",
    "blockNumber": "6365702",
    "change": "2.117826656607921801",
    "changeN": 2.117826656607922,
    "contractAddress": "0x58b6a8a3302369daec383334672404ee733ab239",
    "fileImportId": "3090763006",
    "from": "0x8e306b005773bee6ba6a6e8972bc79d766cc15c8",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "LPT",
    "timestamp": 1537446056000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Livepeer Token",
    "tokenSymbol": "LPT",
    "tokenValue": "2.117826656607921801",
    "tokenValueHistorical": "N/A",
    "txHash": "0x70fb76fa1a862bf0d3946a3e19c980500a9d3545c04834f67137674202acd829",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3390716220",
    "_rev": "1-8a3d230cc24fdc89d842e6483436e6bc",
    "blockNumber": "5798082",
    "change": "911",
    "changeN": 911,
    "contractAddress": "0x7b2f9706cd8473b4f5b7758b0171a9933fc6c4d6",
    "fileImportId": "3090763006",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "HEALP",
    "timestamp": 1529149403000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "An Etheal Promo",
    "tokenSymbol": "HEALP",
    "tokenValue": "911",
    "tokenValueHistorical": "N/A",
    "txHash": "0x93e256a0728412e50a5b8bd8672ee67b96305297a9498b566a032eccbf504fc9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_821303067",
    "_rev": "1-61be763f4c2f7f45e2bb724dcfffa582",
    "blockNumber": "5255185",
    "change": "10",
    "changeN": 10,
    "contractAddress": "0xa4e8c3ec456107ea67d3075bf9e3df3a75823db0",
    "fileImportId": "3090763006",
    "from": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "LOOM",
    "timestamp": 1521059209000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Loom",
    "tokenSymbol": "LOOM",
    "tokenValue": "10",
    "tokenValueHistorical": "$0.79",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3293730455",
    "_rev": "1-a2d43da111a2379018dff468e1400533",
    "blockNumber": "5100803",
    "change": "2",
    "changeN": 2,
    "contractAddress": "0x1d462414fe14cf489c7a21cac78509f4bf8cd7c0",
    "fileImportId": "3090763006",
    "from": "0x00f8d333dd93fb291d627bb80f09392b37241f91",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "CAN",
    "timestamp": 1518793800000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "CanYaCoin",
    "tokenSymbol": "CAN",
    "tokenValue": "2",
    "tokenValueHistorical": "$1.32",
    "txHash": "0xf3c35a52ea24d286c1abf5b4f51a27aff17f70ebf62ef9ab616bd8cedd64e4dd",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3542233293",
    "_rev": "1-f37d675ebec42507fb47d6936d1aa137",
    "blockNumber": "4632419",
    "change": "777",
    "changeN": 777,
    "contractAddress": "0x52903256dd18d85c2dc4a6c999907c9793ea61e3",
    "fileImportId": "3090763006",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "INSP",
    "timestamp": 1511803600000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "INS Promo",
    "tokenSymbol": "INSP",
    "tokenValue": "777",
    "tokenValueHistorical": "N/A",
    "txHash": "0x08e216f2da99f2961380d164c1df7c792dfc1075d026ec778d2e4e1931c80cf9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_85862324",
    "_rev": "1-b3c98ecb9210234389b52ee80a8ad56c",
    "blockNumber": "4528943",
    "change": "29.9787992",
    "changeN": 29.9787992,
    "contractAddress": "0x519475b31653e46d20cd09f9fdcf3b12bdacb4f5",
    "fileImportId": "3090763006",
    "from": "0xae2b80f7f4d285caa658a285233550d19c8e7847",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "VIU",
    "timestamp": 1510362866000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "VIU",
    "tokenSymbol": "VIU",
    "tokenValue": "29.9787992",
    "tokenValueHistorical": "N/A",
    "txHash": "0x5d28d54b66e30c007be9768e6c1852c9df6ab2e903a01479bcfcd19798c85f72",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_418399487",
    "_rev": "1-863423ed58694a9e8d74589cc0c122d6",
    "blockNumber": "4489555",
    "change": "0.21165476692904842",
    "changeN": 0.21165476692904842,
    "contractAddress": "0x0cf0ee63788a0849fe5297f3407f701e122cc023",
    "fileImportId": "3090763006",
    "from": "0x5586aec6f58086524753d594cec08c4318314299",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "XDATA",
    "timestamp": 1509817219000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Streamr (old)",
    "tokenSymbol": "XDATA",
    "tokenValue": "0.21165476692904842",
    "tokenValueHistorical": "$0.02",
    "txHash": "0xeb18c18def1b7bf9e1f2e831647b9c8fe45de82e9669d7b52143a6c2cb15cc64",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_618946868",
    "_rev": "1-7ac5caa0d5683f4edc502cb793a0b31c",
    "blockNumber": "4441567",
    "change": "319.22562200498686051",
    "changeN": 319.22562200498686,
    "contractAddress": "0xab95e915c123fded5bdfb6325e35ef5515f1ea69",
    "fileImportId": "3090763006",
    "from": "0xb59fdff77a6175dfa4fe7af4281a52f61611eaa2",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "XNN",
    "timestamp": 1509150541000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "XENON",
    "tokenSymbol": "XNN",
    "tokenValue": "319.22562200498686051",
    "tokenValueHistorical": "N/A",
    "txHash": "0x117756c2023161a70a4146feedf5b3a3f0b2028e8bc8542b4c59f994a29e5817",
    "wallet": "Spot",
  },
]
`;

exports[`should compute balances 5`] = `
[
  {
    "_id": "32174469_2471540929_1",
    "_rev": "2-97298fceb838db602f377b539cea5e43",
    "balance": -3.117081245895825e-17,
    "change": "-0.0003213",
    "changeN": -0.0003213,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "txId": "32174469_2471540929",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_2471540929_0",
    "_rev": "2-7d5214eb16336557560cee9c36b49012",
    "balance": 0.00032129999999996883,
    "change": "-0.468064038",
    "changeN": -0.468064038,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1604460202000,
    "txId": "32174469_2471540929",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3337412441",
    "_rev": "2-bef4f6fe4244fc3471c2090c50c17290",
    "balance": 2.117826656607922,
    "blockNumber": "6365702",
    "change": "2.117826656607921801",
    "changeN": 2.117826656607922,
    "contractAddress": "0x58b6a8a3302369daec383334672404ee733ab239",
    "fileImportId": "3090763006",
    "from": "0x8e306b005773bee6ba6a6e8972bc79d766cc15c8",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "LPT",
    "timestamp": 1537446056000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Livepeer Token",
    "tokenSymbol": "LPT",
    "tokenValue": "2.117826656607921801",
    "tokenValueHistorical": "N/A",
    "txHash": "0x70fb76fa1a862bf0d3946a3e19c980500a9d3545c04834f67137674202acd829",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3390716220",
    "_rev": "2-774511670ff342ec593a247d02df243a",
    "balance": 911,
    "blockNumber": "5798082",
    "change": "911",
    "changeN": 911,
    "contractAddress": "0x7b2f9706cd8473b4f5b7758b0171a9933fc6c4d6",
    "fileImportId": "3090763006",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "HEALP",
    "timestamp": 1529149403000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "An Etheal Promo",
    "tokenSymbol": "HEALP",
    "tokenValue": "911",
    "tokenValueHistorical": "N/A",
    "txHash": "0x93e256a0728412e50a5b8bd8672ee67b96305297a9498b566a032eccbf504fc9",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_1",
    "_rev": "2-c1b13317c9b0446a949d82ba3efcf6eb",
    "balance": 0.468385338,
    "change": "-0.000134622",
    "changeN": -0.000134622,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "txId": "32174469_4171546297",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297_0",
    "_rev": "2-8b03ae6baf54e7dd3dd6e404eb42dba9",
    "balance": 0.46851995999999996,
    "change": "-0.03",
    "changeN": -0.03,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1521059209000,
    "txId": "32174469_4171546297",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_821303067",
    "_rev": "2-55a048c7bdd0bdb7c55e099a962ce785",
    "balance": 10,
    "blockNumber": "5255185",
    "change": "10",
    "changeN": 10,
    "contractAddress": "0xa4e8c3ec456107ea67d3075bf9e3df3a75823db0",
    "fileImportId": "3090763006",
    "from": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "LOOM",
    "timestamp": 1521059209000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Loom",
    "tokenSymbol": "LOOM",
    "tokenValue": "10",
    "tokenValueHistorical": "$0.79",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3293730455",
    "_rev": "2-5cd4902b1aaedae48ee5bbb11e10e3d9",
    "balance": 2,
    "blockNumber": "5100803",
    "change": "2",
    "changeN": 2,
    "contractAddress": "0x1d462414fe14cf489c7a21cac78509f4bf8cd7c0",
    "fileImportId": "3090763006",
    "from": "0x00f8d333dd93fb291d627bb80f09392b37241f91",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "CAN",
    "timestamp": 1518793800000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "CanYaCoin",
    "tokenSymbol": "CAN",
    "tokenValue": "2",
    "tokenValueHistorical": "$1.32",
    "txHash": "0xf3c35a52ea24d286c1abf5b4f51a27aff17f70ebf62ef9ab616bd8cedd64e4dd",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_1",
    "_rev": "2-035fc3a6e3d7aa4bf131df76d7ee1f4d",
    "balance": 0.49851996,
    "change": "-0.00042",
    "changeN": -0.00042,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "txId": "32174469_3745186990",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990_0",
    "_rev": "2-d9a85002dcf9ea13c1a11a357516460a",
    "balance": 0.49893995999999996,
    "change": "-1",
    "changeN": -1,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1512422010000,
    "txId": "32174469_3745186990",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_3542233293",
    "_rev": "2-fca02bb939138d0e9b536bba35e8010f",
    "balance": 777,
    "blockNumber": "4632419",
    "change": "777",
    "changeN": 777,
    "contractAddress": "0x52903256dd18d85c2dc4a6c999907c9793ea61e3",
    "fileImportId": "3090763006",
    "from": "0x0000000000000000000000000000000000000000",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "INSP",
    "timestamp": 1511803600000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "INS Promo",
    "tokenSymbol": "INSP",
    "tokenValue": "777",
    "tokenValueHistorical": "N/A",
    "txHash": "0x08e216f2da99f2961380d164c1df7c792dfc1075d026ec778d2e4e1931c80cf9",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_85862324",
    "_rev": "2-755449f07968f84fb861bb9f2c076997",
    "balance": 29.9787992,
    "blockNumber": "4528943",
    "change": "29.9787992",
    "changeN": 29.9787992,
    "contractAddress": "0x519475b31653e46d20cd09f9fdcf3b12bdacb4f5",
    "fileImportId": "3090763006",
    "from": "0xae2b80f7f4d285caa658a285233550d19c8e7847",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "VIU",
    "timestamp": 1510362866000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "VIU",
    "tokenSymbol": "VIU",
    "tokenValue": "29.9787992",
    "tokenValueHistorical": "N/A",
    "txHash": "0x5d28d54b66e30c007be9768e6c1852c9df6ab2e903a01479bcfcd19798c85f72",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_418399487",
    "_rev": "2-cee6eb746a2c890f7fb60215e33967c4",
    "balance": 0.21165476692904842,
    "blockNumber": "4489555",
    "change": "0.21165476692904842",
    "changeN": 0.21165476692904842,
    "contractAddress": "0x0cf0ee63788a0849fe5297f3407f701e122cc023",
    "fileImportId": "3090763006",
    "from": "0x5586aec6f58086524753d594cec08c4318314299",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "XDATA",
    "timestamp": 1509817219000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "Streamr (old)",
    "tokenSymbol": "XDATA",
    "tokenValue": "0.21165476692904842",
    "tokenValueHistorical": "$0.02",
    "txHash": "0xeb18c18def1b7bf9e1f2e831647b9c8fe45de82e9669d7b52143a6c2cb15cc64",
    "wallet": "Spot",
  },
  {
    "_id": "3090763006_618946868",
    "_rev": "2-3cc5a8a4d7112e4006385c107971ac38",
    "balance": 319.22562200498686,
    "blockNumber": "4441567",
    "change": "319.22562200498686051",
    "changeN": 319.22562200498686,
    "contractAddress": "0xab95e915c123fded5bdfb6325e35ef5515f1ea69",
    "fileImportId": "3090763006",
    "from": "0xb59fdff77a6175dfa4fe7af4281a52f61611eaa2",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "XNN",
    "timestamp": 1509150541000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "tokenName": "XENON",
    "tokenSymbol": "XNN",
    "tokenValue": "319.22562200498686051",
    "tokenValueHistorical": "N/A",
    "txHash": "0x117756c2023161a70a4146feedf5b3a3f0b2028e8bc8542b4c59f994a29e5817",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_1",
    "_rev": "2-311291f762df53801776a4f3906b365e",
    "balance": 1.49893996,
    "change": "-0.000441",
    "changeN": -0.000441,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "txId": "32174469_1010805629",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629_0",
    "_rev": "2-208d36d8efe80e77e5285034c7a323b0",
    "balance": 1.4993809599999999,
    "change": "-0.5",
    "changeN": -0.5,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1507394778000,
    "txId": "32174469_1010805629",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_1",
    "_rev": "2-1e032787dde4b916a829bfe7b68a2c44",
    "balance": 1.9993809599999999,
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "txId": "32174469_3666988626",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626_0",
    "_rev": "2-4be6985771cdefa8b1e152f01e4d9ef9",
    "balance": 1.99980198,
    "change": "-2.801",
    "changeN": -2.801,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504978649000,
    "txId": "32174469_3666988626",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_1",
    "_rev": "2-a3ff3dba835c62007a23dc40218e55d4",
    "balance": 4.80080198,
    "change": "-0.00042",
    "changeN": -0.00042,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "txId": "32174469_677045801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801_0",
    "_rev": "2-6e80c812be33dd90819e4cfe9dc4cc8b",
    "balance": 4.80122198,
    "change": "-0.25",
    "changeN": -0.25,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504977730000,
    "txId": "32174469_677045801",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_1",
    "_rev": "2-2b64fc6f11d4ac10a125dbe021b9f6ea",
    "balance": 5.05122198,
    "change": "-0.00042102",
    "changeN": -0.00042102,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Fee",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "txId": "32174469_1496232788",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788_0",
    "_rev": "2-3f5551a45676529e1defb9c39a513846",
    "balance": 5.051643,
    "change": "-0.1",
    "changeN": -0.1,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Withdraw",
    "symbol": "ETH",
    "timestamp": 1504974755000,
    "txId": "32174469_1496232788",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4131431469_0",
    "_rev": "2-9682af6b2b51603d4231112afccf6440",
    "balance": 5.151643,
    "change": "5.061643",
    "changeN": 5.061643,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "ETH",
    "timestamp": 1504970517000,
    "txId": "32174469_4131431469",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1605478640_0",
    "_rev": "2-bfcd6888c39fee348851c8b4952444aa",
    "balance": 0.09,
    "change": "0.09",
    "changeN": 0.09,
    "fileImportId": "32174469",
    "integration": "ethereum",
    "operation": "Deposit",
    "symbol": "ETH",
    "timestamp": 1504969089000,
    "txId": "32174469_1605478640",
    "wallet": "Spot",
  },
]
`;

exports[`should compute balances 7`] = `
[
  {
    "_id": "32174469_2471540929",
    "_rev": "1-1fe63a6882a2e7a55e9dfe98c09271f8",
    "blockNumber": "11187695",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1182.96827233165",
    "ethHistoricalPrice": "402.66",
    "fee": "-0.0003213",
    "feeN": -0.0003213,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0.468064038",
    "outgoingN": 0.468064038,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1604460202000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xa6cb206757f26bc188607946af4a6d49f81ace2cf328eb2c36290b0083cc4770",
    "txnFee": "0.0003213",
    "txnFeeUsd": "0.812042103307583",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4171546297",
    "_rev": "1-b8e5469df6ff41abf073952cbd4378af",
    "blockNumber": "5255185",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "75.8209246785792",
    "ethHistoricalPrice": "613.15",
    "fee": "-0.000134622",
    "feeN": -0.000134622,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0.03",
    "outgoingN": 0.03,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1521059209000,
    "to": "0xf652d990e50af27d8d423ac80631b4f5ef6d4113",
    "txHash": "0xca53366c006469162541313f3e714ca7b91f65ea8c5e69205f7aff27aa1dc1d3",
    "txnFee": "0.000134622",
    "txnFeeUsd": "0.340238817402656",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3745186990",
    "_rev": "1-12c44e488382978b2ded641020280958",
    "blockNumber": "4675731",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "2527.36415595264",
    "ethHistoricalPrice": "466.93",
    "fee": "-0.00042",
    "feeN": -0.00042,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "1",
    "outgoingN": 1,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1512422010000,
    "to": "0xae8d7e566ba7bdecd932015475c22cef3ae07768",
    "txHash": "0x56c244f19bcbe2b09b17ce4360c0f53f009202bc791b6d10726346336335b99b",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1010805629",
    "_rev": "1-b3e23de1744cfc555cd60fd8a8112886",
    "blockNumber": "4344914",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "1263.68207797632",
    "ethHistoricalPrice": "311.26",
    "fee": "-0.000441",
    "feeN": -0.000441,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0.5",
    "outgoingN": 0.5,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1507394778000,
    "to": "0x003dc32fe920a4aaeed12dc87e145f030aa753f3",
    "txHash": "0xb41d6819932845278e7c451400f1778a952b35c6358dc51b49436438753f5113",
    "txnFee": "0.000441",
    "txnFeeUsd": "1.11456759277511",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_3666988626",
    "_rev": "1-df8f43a93635fd7e786a76714f391d98",
    "blockNumber": "4255521",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "7079.14700082334",
    "ethHistoricalPrice": "303.79",
    "fee": "-0.00042102",
    "feeN": -0.00042102,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "2.801",
    "outgoingN": 2.801,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1504978649000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0x5681f720f737811e4822936f08b4a8644184bde3ea3efea74614bb44cb78c901",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_677045801",
    "_rev": "1-0fef1ba8f0a47f90da70ded4f0f99c54",
    "blockNumber": "4255492",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "631.84103898816",
    "ethHistoricalPrice": "303.79",
    "fee": "-0.00042",
    "feeN": -0.00042,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0.25",
    "outgoingN": 0.25,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1504977730000,
    "to": "0xa8baf26882084425b4c5ebcd7ddb959c914a74d0",
    "txHash": "0x76127867634dbb645d21ed2833156da65d2c183a726aca483cc09c7ccebebcb0",
    "txnFee": "0.00042",
    "txnFeeUsd": "1.06149294550011",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1496232788",
    "_rev": "1-feb8b37f7df17c1b36f6509c05108cfe",
    "blockNumber": "4255366",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "252.736415595264",
    "ethHistoricalPrice": "303.79",
    "fee": "-0.00042102",
    "feeN": -0.00042102,
    "feeSymbol": "ETH",
    "from": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "incoming": "0",
    "incomingN": 0,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0.1",
    "outgoingN": 0.1,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1504974755000,
    "to": "0x1c6db129a338e9a39a559a856175605dada4bdcd",
    "txHash": "0xfbc404ce56a5b591c989551f39a8b7a5009b022873645d78acee1f8305bd4e34",
    "txnFee": "0.00042102",
    "txnFeeUsd": "1.06407085693918",
    "type": "Withdraw",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_4131431469",
    "_rev": "1-5bd2f8aef6798e0985500b86f58ce4d0",
    "blockNumber": "4255208",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "12792.6150884286",
    "ethHistoricalPrice": "303.79",
    "feeSymbol": "ETH",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "incoming": "5.061643",
    "incomingN": 5.061643,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0",
    "outgoingN": 0,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1504970517000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0x0a11ffa605919dd2cc1524a0fc3de9b32a78678ccdae8aa91439c6353440503e",
    "txnFee": "0.0004851",
    "txnFeeUsd": "1.22602435205263",
    "type": "Deposit",
    "wallet": "Spot",
  },
  {
    "_id": "32174469_1605478640",
    "_rev": "1-06f39063a7e61b187f2b3a40dd0293b3",
    "blockNumber": "4255150",
    "contractAddress": "",
    "errorCode": "",
    "ethCurrentValue": "227.462774035738",
    "ethHistoricalPrice": "303.79",
    "feeSymbol": "ETH",
    "from": "0x75e7f640bf6968b6f32c47a3cd82c3c2c9dcae68",
    "incoming": "0.09",
    "incomingN": 0.09,
    "incomingSymbol": "ETH",
    "integration": "ethereum",
    "method": "Transfer",
    "outgoing": "0",
    "outgoingN": 0,
    "outgoingSymbol": "ETH",
    "status": "",
    "timestamp": 1504969089000,
    "to": "0xf98c96b5d10faafc2324847c82305bd5fd7e5ad3",
    "txHash": "0xbed75f8508fff302e3d6bd6ecb006f33c27d4d17013d9d93f129cb14896df07c",
    "txnFee": "0.0011781",
    "txnFeeUsd": "2.97748771212781",
    "type": "Deposit",
    "wallet": "Spot",
  },
]
`;
